crates/analyzer/tests/snapshots/errors__call_balance_of_with_wrong_type.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: incorrect type for `balance_of` argument `addr`
  ┌─ [snippet]:3:24
  │
3 │   std::evm::balance_of(true)
  │                        ^^^^ this has type `bool`; expected type `address`


